<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CompleSense</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="launch_group_owner">Launch as Group Owner</string>
    <string name="launch_group_client">Launch as Group Client</string>
    <string name="p2p_off_warning">Wifi is turned off</string>
    <string name="remote_service_started">CompleSense client starts</string>
    <string name="remote_service_stopped">client service stops</string>
    <string name="remote_service_client">CompleSense client service</string>
    <string name="disconnect">Disconnect</string>
    <string name="finding_connected_peers">Finding connected Peers</string>
    <string name="available_servers">Available Servers</string>
    <string name="finding_service">Finding available servers</string>
    <string name="stop_server">Stop</string>
    <string name="connected_clients">Connected Clients</string>
    <string name="empty_server_message">Waiting for clients connection</string>
    <string name="host">universe.hiit.fi</string>
    <string name="burst_mode_camera">Take multiple photos</string>
    <string name="added_local_service">Advertising local service</string>
    <string name="unknown_status">Unknown system status</string>
    <string name="finding_new_master">Searching for new master</string>
    <string name="myself_is_new_master">I am the new group master</string>
    <string name="new_secondary_master">I am selected as the new secondary master</string>
    <string name="local_dns_service_stops">Local DNS service is stopped</string>
    <string name="disconnect_succeed">Disconnect succeedd</string>
    <string name="restart_serivce">Restarting service</string>
    <string name="old_service_removed">Previous registered service is removed</string>
    <string name="get_new_secondary_master">I am not the secondary master anymore</string>

</resources>
